# weather-cli

./: Cargo.toml  Makefile  README.md
src/: cli.rs  main.rs
src/api/: mod.rs  model.rs  weather_api_client.rs  weather_api_client_builder.rs
src/location/: model.rs
