[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] } # reqwest with JSON parsing support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-macros = "2.2.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
clap ={version = "4.5.4", features = ["derive"] } # Command line parsing library "4.5.4"
clap_derive = "4.5.4"
